# setup_cpp20

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  install.sh  install_cpp20_macOS.sh  modern_cpp20_demo.cpp
docs/workflow/: workflow-documentation.html
helpers/: README.md  create-cpp20-project.sh  process_templates.sh  project_config.example.json  setup-cpp20-ultimate.sh  template_processor.py  tools_vckg_helper.sh  vcpkg-diagnose.sh
templates/console/: .gitignore.template  CMakeLists.txt.template  main.cpp.template
templates/console/tests/: CMakeLists.txt.template  test_console.cpp.template  test_main.cpp.template
templates/shared/: .clang-format  CHANGELOG.md.template  CONTRIBUTING.md.template  Doxyfile.template  LICENSE.template  README.md.template  vcpkg.json.template
templates/shared/cmake/: CompilerWarnings.cmake  VcpkgHelpers.cmake
templates/shared/modules/: utils.cppm
templates/shared/scripts/: CONTRIBUTING.md  README.md  analyze.sh  analyze.sh.template  build.sh  build.sh.template  cache-clear.sh  clean.sh  deps-update.sh  deps-update.sh.template  format.sh  format.sh.template  generate-workflow-docs.sh  generate-workflow-docs.sh.template  generate_docs.sh.template  sanitize.sh  sanitize.sh.template  test.sh  test.sh.template  version-bump.sh  version-bump.sh.template
templates/shared/scripts/ci/: ci-build.sh  ci-build.sh.template  ci-deploy.sh.template  ci-docs.sh.template  ci-package.sh  ci-package.sh.template  ci-validate.sh  ci-validate.sh.template
templates/shared/scripts/ci/examples/: github-actions.yml
templates/shared/scripts/utils/: PLATFORM_COMPAT_GUIDE.md  example_integration.sh  migrate_to_compat.sh  platform_compat.sh
templates/shared/tests/: CMakeLists.txt.template  test_library.cpp.template  test_main.cpp.template
